# Tusk-Launcher

./: (minimalist)theme.css  Cargo.toml  LICENSE  PKGBUILD  README.md  app_launcher.rs  cache.rs  clock.rs  config.rs  gui.rs  main.rs  sni.rs  svg.rs  theme.css
src/: app_cache.rs  app_launcher.rs  audio.rs  cache.rs  clock.rs  config.rs  desktop_entry.rs  eframe_impl.rs  gui.rs  gui_trait.rs  main.rs  paths.rs  power.rs  qt_impl.rs  recent_apps.rs  sni.rs  system.rs  utils.rs
src/gui/: egui_gui.rs  mod.rs
