[package]
name = "Tusk-Launcher"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
once_cell = "1.19"
xdg = "3.0"
rayon = "1.10"
# Time handling
time = { version = "0.3", default-features = false, features = ["std", "formatting", "macros", "local-offset", "parsing"] }

# GUI
egui = { version = "0.33", default-features = false, features = ["default_fonts"] }
eframe = { version = "0.33", default-features = false, features = ["glow", "default_fonts", "wayland", "x11"] }

# Image support
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "ico", "bmp", "tiff"] }

# SVG support
resvg = { version = "0.45", default-features = false, features = ["text"] }

# SNI (StatusNotifierItem) tray host — D-Bus via zbus with tokio async executor
zbus  = { version = "4", default-features = false, features = ["tokio"] }
tokio = { version = "1", default-features = false, features = ["rt", "time", "net", "sync"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }